--- a/src/engine/editor/app/style/typography.css
+++ b/src/engine/editor/app/style/typography.css
@@ -2,6 +2,8 @@ h1,
 h2,
 h3,
 h4 {
+  margin-top: var(--spacing-s);
+  margin-bottom: var(--spacing-m);
   font-weight: 400;
 }
 
